--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     </style>
 </head>
 <body>
-    <div class="wheel-container">
+    <div class="wheel-container" ontouchstart="">
         <!-- Large wheel 8 sections -->
         <div class="wheel wheel-large" id="large-wheel"></div>
         
