--- a/index.html
+++ b/index.html
@@ -8,22 +8,22 @@
     <style>
         @media (max-width: 480px) {
             .wheel-container {
-                transform: scale(0.6);
+                transform: scale(0.8);
             }
             .section-label {
-                font-size: 14px !important;
+                font-size: 16px !important;
             }
             .modal-content {
-                width: 80% !important;
-                max-width: 300px !important;
+                width: 90% !important;
+                max-width: 350px !important;
             }
         }
         @media (min-width: 481px) and (max-width: 768px) {
             .wheel-container {
-                transform: scale(0.8);
+                transform: scale(0.9);
             }
             .section-label {
-                font-size: 18px !important;
+                font-size: 20px !important;
             }
         }
         
@@ -42,27 +42,18 @@
         .modal-content {
             position: relative;
             background-color: #fefefe;
-            margin: 15% auto;
-            padding: 20px;
+            margin: 10% auto;
+            padding: 30px;
             border: 1px solid #888;
-            width: 60%;
-            max-width: 600px;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            width: 80%;
+            max-width: 800px;
+            border-radius: 12px;
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
             z-index: 1000;
-        }
-
-        .section-label {
             position: absolute;
+            top: 50%;
+            left: 50%;
             transform: translate(-50%, -50%);
-            text-align: center;
-            color: #000;
-            font-weight: bold;
-            text-shadow: 2px 2px 4px rgba(255, 255, 255, 0.8);
-            padding: 5px 10px;
-            border-radius: 4px;
-            pointer-events: auto;
-            z-index: 10;
         }
 
         .nested-modal {
@@ -78,55 +69,48 @@
 
         .nested-modal-content {
             background-color: #fefefe;
-            margin: 15% auto;
-            padding: 20px;
+            margin: 10% auto;
+            padding: 30px;
             border: 1px solid #888;
-            width: 50%;
-            max-width: 500px;
-            border-radius: 8px;
-            position: relative;
+            width: 70%;
+            max-width: 700px;
+            border-radius: 12px;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
         }
 
         .content-box {
-            background-color: #f5f5f5;
-            padding: 15px;
-            margin: 10px 0;
-            border-radius: 5px;
+            background-color: #f8f9fa;
+            padding: 25px;
+            margin: 15px 0;
+            border-radius: 8px;
             cursor: pointer;
-            transition: background-color 0.3s;
-            border: 1px solid #ddd;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            transition: all 0.3s ease;
+            border: 1px solid #e9ecef;
+            box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+            font-size: 16px;
         }
 
         .content-box:hover {
-            background-color: #e0e0e0;
-            transform: translateY(-2px);
-            box-shadow: 0 4px 8px rgba(0,0,0,0.15);
-        }
-
-        .close-btn {
-            position: absolute;
-            right: 15px;
-            top: 10px;
-            color: #aaa;
-            font-size: 28px;
-            font-weight: bold;
-            cursor: pointer;
-        }
-
-        .close-btn:hover {
-            color: black;
+            background-color: #e9ecef;
+            transform: translateY(-3px);
+            box-shadow: 0 6px 12px rgba(0,0,0,0.15);
         }
 
         .modal-title {
             margin-top: 0;
             color: #2970db;
-            padding-bottom: 10px;
-            border-bottom: 1px solid #eee;
+            padding-bottom: 15px;
+            border-bottom: 2px solid #eee;
+            font-size: 24px;
         }
 
         .modal-body {
-            margin: 15px 0;
+            margin: 20px 0;
+            font-size: 20px;
+            line-height: 1.6;
         }
 
         /* Make section labels clickable */
@@ -139,6 +123,21 @@
         .clickable-label:hover {
            
             text-shadow: 0 0 5px rgba(255, 255, 255, 0.7);
+        }
+
+        .close-btn {
+            position: absolute;
+            right: 15px;
+            top: 15px;
+            color: #ff0000;
+            font-size: 28px;
+            font-weight: bold;
+            cursor: pointer;
+        }
+
+        .close-btn:hover {
+            color: #000;
+            text-decoration: none;
         }
     </style>
 </head>
